# SixthLabCpp

./: CMakeLists.txt  main.cpp
.github/workflows/: release.yaml
core/: Core.cpp  Core.h  CoreInterface.h
output/: Output.h  OutputInterface.h  output.cpp
primitives/: Circle.cpp  Circle.h  Document.cpp  Document.h  DocumentInterface.h  PrimitiveInterface.h  Sqare.cpp  Sqare.h
